--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,7 +68,7 @@
 
 <section class="container pb-5 pt-3 pt-sm-4 pt-lg-5 my-xl-3 my-xxl-5 mb-5">
     <h2 class="h1 text-center">SCOUT LEADERS</h2>
-    <p class="text-center pb-4 mb-2 mb-lg-3">We have been helping businesses in the following industries for over a decade</p>
+    <p class="text-center pb-4 mb-2 mb-lg-3">Al-Mustufa Scouts giving youth useful skills for over a decade</p>
     <!-- Swiper slider-->
     <div class="swiper" data-swiper-options="
     {
@@ -415,8 +415,7 @@
     <div class="row row-cols-1 row-cols-md-2 g-4">
 
         <div class="col">
-            <div class="card bg-primary border-0 h-100 overflow-hidden pt-3 pt-xl-4 px-lg-3 px-xl-4"
-                style="position: relative;">
+            <div class="card bg-primary border-0 h-100 overflow-hidden pt-3 pt-xl-4 px-lg-3 px-xl-4">
                 <div class="card-body position-relative zindex-2 pb-0">
                     <h3 class="h4 card-title text-light">Aim of Al-Mustufa Scouts</h3>
                     <p class="card-text text-light opacity-80 pb-sm3 pb-md-4 mb-2">to aid young people in developing spiritually, mentally, physically, and socially. so they can contribute well to society while emphasising outdoor activities and survival skills A person becomes a self-assured, helpful, responsible, and patriotic citizen via the training programmes and activities of the Scouts.</p>
@@ -425,8 +424,8 @@
                         <i class="ai-arrow-right ms-2"></i>
                     </a>
                 </div>
-                <div class="d-flex justify-content-end mt-sm-n5 me-n4">
-                    <img src="https://png.pngtree.com/png-clipart/20220717/ourmid/pngtree-scout-camp-orange-tent-png-image_6002605.png" style="width: 550px; position: absolute; bottom: -100px; right: -80px; opacity: 0.3;" alt="Image">
+                <div class="d-flex justify-content-end mt-n4 mt-sm-n5 me-n4">
+                    <img src="/img/camp.png" width="80%" style="opacity: 0.4;" alt="Image">
                 </div>
             </div>
         </div>
@@ -445,7 +444,7 @@
                     </a>
                 </div>
                 <div class="d-flex justify-content-end mt-n4 mt-sm-n5 me-n4">
-                    <img src="/img/landing/business-consulting/case-studies/02.png" width="291" alt="Image">
+                    <img src="/img/map.png" width="60%" style="opacity: 0.4;" alt="Image">
                 </div>
             </div>
         </div>
