--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,10 +10,10 @@
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon and Touch Icons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="mask-icon" color="#6366f1" href="/favicon/safari-pinned-tab.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/logo.png">
+    <link rel="mask-icon" color="#6366f1" href="/img/logo.png">
     <meta name="msapplication-TileColor" content="#080032">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="white">
@@ -226,16 +226,16 @@
                 <nav class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav navbar-nav-scroll me-auto ps-2" style="--ar-scroll-height: 520px; border-left: 1px solid rgb(113, 113, 113);">
                         <li class="nav-item">
-                            <a href="/" class="nav-link">Home</a>
+                            <a href="/" class="nav-link <%= active === 'home' ? 'active' : '' %>">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/about" class="nav-link">About</a>
+                            <a href="/about" class="nav-link <%= active === 'about' ? 'active' : '' %>">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/services" class="nav-link">Services</a>
+                            <a href="/services" class="nav-link <%= active === 'services' ? 'active' : '' %>">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/contact" class="nav-link">Contact</a>
+                            <a href="/contact" class="nav-link <%= active === 'contact' ? 'active' : '' %>">Contact</a>
                         </li>
                     </ul>
                     <div class="d-sm-none p-3 mt-n3">
