Al-Mustufa Scouts Website

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -374,7 +374,7 @@
           <p class="fs-xl pb-4 mb-2 mb-lg-3">Pakistan's first Chief Scout was Quaid-e-Azam Muhammad Ali Jinnah, the
             country's founder.
             On December 22, 1947, he took the oath at Karachi's Governor House. </p>
-          <button class="btn btn-warning" style="color: #171a1e" type="button">Join Us Today</button>
+            <a href="/join-us" class="btn btn-warning" style="color: #171a1e">Join Us Today</a>
         </div>
       </div>
       <div class="d-none d-md-block text-center mt-n5">
