--- a/views/error.ejs
+++ b/views/error.ejs
@@ -195,10 +195,7 @@
                         <h1 class="display-1 mb-0"><%= statusCode %></h1>
                         <p class="text-dark lead ps-4 mb-0"><%= message %></p>
                     </div>
-                    <form class="input-group">
-                        <input class="form-control" type="search" placeholder="Enter keywords" required>
-                        <button class="btn btn-dark" type="submit">Search</button>
-                    </form>
+                    <a href="/" class="btn btn-primary w-100">Back To Home</a>
                 </div>
             </div>
         </div>
