--- a/views/home.ejs
+++ b/views/home.ejs
@@ -401,10 +401,10 @@
                 </div>
             </div>
         </div>
-        <!-- Pagination (bullets)-->
+         Pagination (bullets)
         <div class="swiper-pagination position-relative bottom-0 mt-2 mt-md-3 mt-lg-4 pt-4"></div>
     </div>
-</section> -->
+</section>-->
 
 
 
@@ -464,7 +464,7 @@
             <div class="col-md-6 col-lg-5 col-xl-4 offset-lg-1">
                 <p class="fs-xl pb-4 mb-2 mb-lg-3">Pakistan's first Chief Scout was Quaid-e-Azam Muhammad Ali Jinnah, the country's founder.
                     On December 22, 1947, he took the oath at Karachi's Governor House. </p>
-                <button class="btn btn-warning" style="color: #171a1e" type="button">Join Us Today</button>
+                <a href="/join-us" class="btn btn-warning" style="color: #171a1e">Join Us Today</a>
             </div>
         </div>
         <div class="d-none d-md-block text-center mt-n5">
