--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -67,6 +67,7 @@
                             </a>
                         </div>
                     </div>
+                    <p class="mt-5 text-center">Already have account? Please <a href="/sign-in">SignIn</a></p>
                 </div>
             </form>
         </div>
